# msofaplugin

./: CMakeLists.txt  initPlugin.cpp  mSofaPluginConfig.cmake.in
scenes/: Armadillo.scn  ArmadilloPy.scn  CudaFullIncomingSparseMatrix.scn  FullIncomingSparseMatrix.scn  IncomingSparseMatrix.scn  IncomingSparseMatrix_multi.scn  Topology.xml  UnbuiltMatrix.scn  armadillo.py  bench.py  test_bench.py
src/sofa/msofaplugin/matrix/: BaseSystemMatrix.h  BuildMatrixVisitors.h  CompressableMatrix.h  EigenSparseMatrix.cpp  EigenSparseMatrix.h  FullIncomingSparseMatrix.cpp  FullIncomingSparseMatrix.h  IncomingSparseMatrix.cpp  IncomingSparseMatrix.h  LocalIncomingSparseMatrix.cpp  LocalIncomingSparseMatrix.h  MUnbuiltMatrix.cpp  MUnbuiltMatrix.h  MechanicalVector.cpp  MechanicalVector.h  StateAccessor.cpp  StateAccessor.h  StateSynchronizer.h  StateVectorOperator.cpp  StateVectorOperator.h
src/sofa/msofaplugin/solver/: MBaseLinearSolver.h  MPCGLinearSolver.cpp  MPCGLinearSolver.h  MPCGLinearSolver.inl  MShewchukPCGLinearSolver.cpp  MShewchukPCGLinearSolver.h
